ffmpeg: Add v4l2 support

--- a/tools/depends/configure.ac
+++ b/tools/depends/configure.ac
@@ -494,6 +494,8 @@ if test "$target_platform" = "raspberry-pi" ; then
    -lvchiq_arm"
 fi
 
+platform_ldflags+=" -L${use_firmware}/opt/vc/lib -lvcsm"
+
 XBMC_SETUP_ARCH_DEFINES()
 
 
